# AI-Local-Podcast-System

./: .gitignore  API.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  README.md  api.py  docker-compose.yml  example_api_usage.py  manual_run.py  manual_run_ai_agents.py  podcast_agent.py  pyproject.toml  requirements.txt  setup.sh  test_audio.py  test_ops.py
web/: Dockerfile
web/app/: page.tsx
